force-app/main/default/objects/Goal_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Commission_Sales_Rep__c</fullName>
        <label>Commission Sales Rep</label>
        <referenceTo>Commission_Sales_Rep__c</referenceTo>
        <relationshipLabel>Goal Details</relationshipLabel>
        <relationshipName>Goal_Details</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GP_Goal__c</fullName>
        <label>GP Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goal_Period__c</fullName>
        <label>Goal Period</label>
        <referenceTo>Goal_Period__c</referenceTo>
        <relationshipLabel>Goal Details</relationshipLabel>
        <relationshipName>Goal_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Date_Calculated__c</fullName>
        <formula>Goal_Period__r.Last_Run_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Date Calculated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Doc_Date__c</fullName>
        <label>Most Recent Doc Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rev_Goal__c</fullName>
        <label>Rev Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesPeriod__c</fullName>
        <label>SalesPeriod</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Split_Ext_GP__c</fullName>
        <label>Split Ext GP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Ext_Sales__c</fullName>
        <label>Split Ext Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Goal Detail</label>
    <nameField>
        <label>Goal Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goal Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>